# framework16-led-matrix-manager

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  build_linux.yml
include/fw16led/: LedPanel.hpp  Preset.hpp  PresetOption.hpp  PresetRegistry.hpp  global.hpp
include/fw16led/ledmatrix/: font.hpp  ledmatrix.hpp
include/fw16led/managers/: usb.hpp
src/: Application.cpp  Application.hpp  LedPanel.cpp  main.cpp
src/ledmatrix/: ledmatrix.cpp
src/managers/: usb.cpp
src/presets/: Clock.cpp  Clock.hpp  Gradient.cpp  Gradient.hpp  Off.cpp  Off.hpp  Text.cpp  Text.hpp  ZigZag.cpp  ZigZag.hpp
src/ui/: MainWindow.cpp  MainWindow.hpp  SettingsTab.cpp  SettingsTab.hpp
